Remove Falcon car entry from CAR_DB

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
     ============================================================ */
 
     const CAR_DB = [
-      { id:"falcon",  name:"Falcon",  cls:"GT",     topSpeed:220, zeroToSixty:3.4, bhp:460, handling:82, img:"falcon.png" },
+      { id:"murcielago1",  name:"Lamborghini Murcielago",  cls:"GT",     topSpeed:205, zeroToSixty:3.4, bhp:572, handling:99, img:"murcielago1.png" },
       { id:"viper",   name:"Viper",   cls:"GT",     topSpeed:235, zeroToSixty:3.1, bhp:510, handling:76, img:"viper.png" },
       { id:"shadow",  name:"Shadow",  cls:"Track",  topSpeed:210, zeroToSixty:3.6, bhp:430, handling:90, img:"shadow.png" },
       { id:"blaze",   name:"Blaze",   cls:"GT",     topSpeed:228, zeroToSixty:3.3, bhp:485, handling:84, img:"blaze.png" },
