--- a/index.html
+++ b/index.html
@@ -424,17 +424,21 @@
     }
 
     .thumb{
-      height: 160px;
-      border-bottom: 1px solid var(--border);
-      position: relative;
-      background: rgba(255,255,255,0.03);
-    }
-    .thumb img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display:block;
-    }
+  height: 160px;
+  border-bottom: 1px solid var(--border);
+  background: rgba(255,255,255,0.03);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+}
+
+.thumb img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  display: block;
+}
 
     .badge{
       position:absolute;
