Add 2014 Volkswagen Golf GTI to CAR_DB

--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 
     const CAR_DB = [
       { id:"murcielago1",  name:"2001 Lamborghini Murcielago",  cls:"GT",     topSpeed:205, zeroToSixty:3.6, bhp:572, handling:99, img:"murcielago1.png" },
-      { id:"viper",   name:"Viper",   cls:"GT",     topSpeed:72, zeroToSixty:9.1, bhp:510, handling:76, img:"viper.png" },
+      { id:"golfgti1",   name:"2014 Volkswagen Golf GTI",   cls:"GT",     topSpeed:152, zeroToSixty:6.2, bhp:226, handling:76, img:"golfgti1.png" },
       { id:"shadow",  name:"Shadow",  cls:"Track",  topSpeed:210, zeroToSixty:8.6, bhp:430, handling:90, img:"shadow.png" },
       { id:"blaze",   name:"Blaze",   cls:"GT",     topSpeed:228, zeroToSixty:7.3, bhp:485, handling:84, img:"blaze.png" },
       { id:"storm",   name:"Storm",   cls:"Track",  topSpeed:205, zeroToSixty:9.8, bhp:410, handling:95, img:"storm.png" },
