--- a/index.html
+++ b/index.html
@@ -825,28 +825,28 @@
     ============================================================ */
 
     const CAR_DB = [
-      { id:"murcielago1",  name:"2001 Lamborghini Murcielago",  cls:"GT",     topSpeed:205, zeroToSixty:3.6, bhp:572, handling:99, img:"murcielago1.png" },
-      { id:"golfgti1",   name:"2014 Volkswagen Golf GTI",   cls:"GT",     topSpeed:152, zeroToSixty:6.2, bhp:226, handling:76, img:"golfgti1.png" },
-      { id:"shadow",  name:"Shadow",  cls:"Track",  topSpeed:210, zeroToSixty:8.6, bhp:430, handling:90, img:"shadow.png" },
-      { id:"blaze",   name:"Blaze",   cls:"GT",     topSpeed:228, zeroToSixty:7.3, bhp:485, handling:84, img:"blaze.png" },
-      { id:"storm",   name:"Storm",   cls:"Track",  topSpeed:205, zeroToSixty:9.8, bhp:410, handling:95, img:"storm.png" },
-      { id:"phantom", name:"Phantom", cls:"Hyper",  topSpeed:250, zeroToSixty:12.9, bhp:620, handling:78, img:"phantom.png" },
+      { id:"falcon",  name:"Falcon",  cls:"GT",     topSpeed:220, zeroToSixty:3.4, bhp:460, handling:82, img:"falcon.png" },
+      { id:"viper",   name:"Viper",   cls:"GT",     topSpeed:235, zeroToSixty:3.1, bhp:510, handling:76, img:"viper.png" },
+      { id:"shadow",  name:"Shadow",  cls:"Track",  topSpeed:210, zeroToSixty:3.6, bhp:430, handling:90, img:"shadow.png" },
+      { id:"blaze",   name:"Blaze",   cls:"GT",     topSpeed:228, zeroToSixty:3.3, bhp:485, handling:84, img:"blaze.png" },
+      { id:"storm",   name:"Storm",   cls:"Track",  topSpeed:205, zeroToSixty:3.8, bhp:410, handling:95, img:"storm.png" },
+      { id:"phantom", name:"Phantom", cls:"Hyper",  topSpeed:250, zeroToSixty:2.9, bhp:620, handling:78, img:"phantom.png" },
 
-      { id:"ember",   name:"Ember",   cls:"GT",     topSpeed:225, zeroToSixty:12.2, bhp:495, handling:80, img:"ember.png" },
-      { id:"quartz",  name:"Quartz",  cls:"Track",  topSpeed:215, zeroToSixty:8.5, bhp:455, handling:92, img:"quartz.png" },
-      { id:"nova",    name:"Nova",    cls:"Hyper",  topSpeed:245, zeroToSixty:12.9,bhp:640, handling:81, img:"nova.png" },
-      { id:"raven",   name:"Raven",   cls:"GT",     topSpeed:232, zeroToSixty:12.25,bhp:520, handling:83, img:"raven.png" },
+      { id:"ember",   name:"Ember",   cls:"GT",     topSpeed:225, zeroToSixty:3.2, bhp:495, handling:80, img:"ember.png" },
+      { id:"quartz",  name:"Quartz",  cls:"Track",  topSpeed:215, zeroToSixty:3.5, bhp:455, handling:92, img:"quartz.png" },
+      { id:"nova",    name:"Nova",    cls:"Hyper",  topSpeed:245, zeroToSixty:2.95,bhp:640, handling:81, img:"nova.png" },
+      { id:"raven",   name:"Raven",   cls:"GT",     topSpeed:232, zeroToSixty:3.25,bhp:520, handling:83, img:"raven.png" },
 
       /* Add more cars below (just keep unique ids) */
-      { id:"lynx",    name:"Lynx",    cls:"GT",     topSpeed:218, zeroToSixty:9.55,bhp:440, handling:86, img:"lynx.png" },
-      { id:"comet",   name:"Comet",   cls:"Track",  topSpeed:212, zeroToSixty:9.65,bhp:420, handling:96, img:"comet.png" },
-      { id:"sabre",   name:"Sabre",   cls:"GT",     topSpeed:238, zeroToSixty:9.15,bhp:540, handling:74, img:"sabre.png" },
-      { id:"zenith",  name:"Zenith",  cls:"Hyper",  topSpeed:255, zeroToSixty:9.85,bhp:690, handling:80, img:"zenith.png" },
+      { id:"lynx",    name:"Lynx",    cls:"GT",     topSpeed:218, zeroToSixty:3.55,bhp:440, handling:86, img:"lynx.png" },
+      { id:"comet",   name:"Comet",   cls:"Track",  topSpeed:212, zeroToSixty:3.65,bhp:420, handling:96, img:"comet.png" },
+      { id:"sabre",   name:"Sabre",   cls:"GT",     topSpeed:238, zeroToSixty:3.15,bhp:540, handling:74, img:"sabre.png" },
+      { id:"zenith",  name:"Zenith",  cls:"Hyper",  topSpeed:255, zeroToSixty:2.85,bhp:690, handling:80, img:"zenith.png" },
 
-      { id:"pulse",   name:"Pulse",   cls:"Track",  topSpeed:208, zeroToSixty:8.7, bhp:405, handling:98, img:"pulse.png" },
-      { id:"vector",  name:"Vector",  cls:"GT",     topSpeed:226, zeroToSixty:8.35,bhp:490, handling:85, img:"vector.png" },
-      { id:"arc",     name:"Arc",     cls:"Track",  topSpeed:216, zeroToSixty:7.45,bhp:470, handling:94, img:"arc.png" },
-      { id:"titan",   name:"Titan",   cls:"GT",     topSpeed:234, zeroToSixty:6.28,bhp:525, handling:79, img:"titan.png" }
+      { id:"pulse",   name:"Pulse",   cls:"Track",  topSpeed:208, zeroToSixty:3.7, bhp:405, handling:98, img:"pulse.png" },
+      { id:"vector",  name:"Vector",  cls:"GT",     topSpeed:226, zeroToSixty:3.35,bhp:490, handling:85, img:"vector.png" },
+      { id:"arc",     name:"Arc",     cls:"Track",  topSpeed:216, zeroToSixty:3.45,bhp:470, handling:94, img:"arc.png" },
+      { id:"titan",   name:"Titan",   cls:"GT",     topSpeed:234, zeroToSixty:3.28,bhp:525, handling:79, img:"titan.png" }
     ];
 
     /* ============================================================
@@ -1679,64 +1679,57 @@
     }
 
     function stepRacer(r, dtMs){
-  const dt = dtMs / 1000;
-  const track = state.track;
+      const dt = dtMs / 1000;
+      const track = state.track;
 
-  // Look ahead distance increases with speed
-  const lookAhead = clamp(r.v * 1.1, 25, 80);
+      // Look ahead point to get severity (braking anticipation)
+      const lookAhead = clamp(r.v * 0.85, 18, 55); // meters
+      const here = track.sampleAtDistMeters(r.distance);
+      const ahead = track.sampleAtDistMeters(r.distance + lookAhead);
 
-  const now = track.sampleAtDistMeters(r.distance);
-  const ahead = track.sampleAtDistMeters(r.distance + lookAhead);
+      // We use ahead severity to start braking early.
+      const sev = clamp(lerp(here.severity, ahead.severity, 0.70), 0, 1);
 
-  const severity = clamp(
-    now.severity * 0.4 + ahead.severity * 0.6,
-    0,
-    1
-  );
+      // Compute caps
+      const vmaxStraight = r.perf.vmax;
+      const vmaxCorner = cornerCap(r.perf, sev);
+      const vcap = Math.min(vmaxStraight, vmaxCorner);
 
-  const vmaxStraight = r.perf.vmax;
-  const vmaxCorner = cornerCap(r.perf, severity);
+      // If current velocity exceeds cap, brake
+      if (r.v > vcap){
+        // braking strength scales with severity
+        const brake = lerp(5.5, 10.5, sev); // m/s^2
+        r.v = Math.max(vcap, r.v - brake * dt);
+      } else {
+        // accelerate toward cap
+        const a = accelAtSpeed(r.perf, r.v);
+        r.v = Math.min(vcap, r.v + a * dt);
+      }
 
-  // --- Braking behaviour ---
-  if(r.v > vmaxCorner){
+      // Micro variance: slight "line imperfections"
+      if (state.microChaos){
+        // tiny random fluctuations in speed, more in corners
+        const jitter = (0.006 + sev*0.010) * (Math.random() - 0.5);
+        r.v = Math.max(0, r.v * (1 + jitter));
+      }
 
-    // heavier braking for sharper corners
-    const brakeForce = lerp(6, 14, severity);
-    r.v -= brakeForce * dt;
+      // Advance distance
+      r.distance += r.v * dt;
 
-  } else {
+      // Lap tracking
+      const lapMeters = track.lapMeters;
+      const newLap = Math.floor(r.distance / lapMeters);
 
-    // acceleration on straights and exits
-    const accel = accelAtSpeed(r.perf, r.v);
-    r.v += accel * dt;
-  }
-
-  r.v = clamp(r.v, 0, vmaxStraight);
-
-  // --- Micro errors ---
-  if(state.microChaos){
-    const wobble = (Math.random()-0.5) * severity * 0.02;
-    r.v *= (1 + wobble);
-  }
-
-  // Move forward
-  r.distance += r.v * dt;
-
-  // Lap detection
-  const lapLen = track.lapMeters;
-  const newLap = Math.floor(r.distance / lapLen);
-
-  if(newLap > r.lap){
-    const lapTime = state.simMs - r.lastLapStartMs;
-
-    if(lapTime > 1000){
-      r.lapTimes.push(lapTime);
+      if (newLap > r.lap){
+        // record lap time
+        const lapTime = state.simMs - r.lastLapStartMs;
+        if (lapTime > 1000 && lapTime < 600000){
+          r.lapTimes.push(lapTime);
+        }
+        r.lap = newLap;
+        r.lastLapStartMs = state.simMs;
+      }
     }
-
-    r.lap = newLap;
-    r.lastLapStartMs = state.simMs;
-  }
-}
 
     function stepAll(dtMs){
       for (const r of state.racers){
@@ -1800,64 +1793,51 @@
     }
 
     function drawTrack(track){
-  const pts = track.pts;
+      const pts = track.pts;
 
-  ctx.save();
-  ctx.lineCap = "round";
-  ctx.lineJoin = "round";
+      // Road (thick)
+      ctx.save();
+      ctx.lineCap = "round";
+      ctx.lineJoin = "round";
 
-  // --- Runoff area ---
-  ctx.strokeStyle = "rgba(20,20,20,0.9)";
-  ctx.lineWidth = 82;
-  ctx.beginPath();
-  smoothPath(pts);
-  ctx.stroke();
+      ctx.strokeStyle = "rgba(0,0,0,0.40)";
+      ctx.lineWidth = 54;
+      ctx.beginPath();
+      for (let i=0;i<pts.length;i++){
+        const p = pts[i];
+        if (i===0) ctx.moveTo(p.x, p.y);
+        else ctx.lineTo(p.x, p.y);
+      }
+      ctx.closePath();
+      ctx.stroke();
 
-  // --- Asphalt ---
-  ctx.strokeStyle = "#2a2a2a";
-  ctx.lineWidth = 60;
-  ctx.beginPath();
-  smoothPath(pts);
-  ctx.stroke();
+      // Edge line
+      ctx.strokeStyle = "rgba(255,255,255,0.10)";
+      ctx.lineWidth = 6;
+      ctx.beginPath();
+      for (let i=0;i<pts.length;i++){
+        const p = pts[i];
+        if (i===0) ctx.moveTo(p.x, p.y);
+        else ctx.lineTo(p.x, p.y);
+      }
+      ctx.closePath();
+      ctx.stroke();
 
-  // --- Edge lines ---
-  ctx.strokeStyle = "rgba(255,255,255,0.18)";
-  ctx.lineWidth = 6;
-  ctx.beginPath();
-  smoothPath(pts);
-  ctx.stroke();
+      // Center line (dashed)
+      ctx.strokeStyle = "rgba(255,255,255,0.08)";
+      ctx.lineWidth = 2;
+      ctx.setLineDash([10,10]);
+      ctx.beginPath();
+      for (let i=0;i<pts.length;i++){
+        const p = pts[i];
+        if (i===0) ctx.moveTo(p.x, p.y);
+        else ctx.lineTo(p.x, p.y);
+      }
+      ctx.closePath();
+      ctx.stroke();
+      ctx.setLineDash([]);
 
-  // --- Center dashed ---
-  ctx.setLineDash([18,14]);
-  ctx.strokeStyle = "rgba(255,255,255,0.12)";
-  ctx.lineWidth = 2;
-  ctx.beginPath();
-  smoothPath(pts);
-  ctx.stroke();
-  ctx.setLineDash([]);
-
-  ctx.restore();
-    } 
-
-    function smoothPath(points){
-  ctx.moveTo(points[0].x, points[0].y);
-
-  for(let i=1;i<points.length-1;i++){
-    const midX = (points[i].x + points[i+1].x) / 2;
-    const midY = (points[i].y + points[i+1].y) / 2;
-
-    ctx.quadraticCurveTo(
-      points[i].x,
-      points[i].y,
-      midX,
-      midY
-    );
-  }
-
-  const last = points[points.length-1];
-  ctx.lineTo(last.x,last.y);
-  ctx.closePath();
-    }
+      ctx.restore();
 
       // Start/finish marker near first point segment
       const start = pts[0];
@@ -2303,4 +2283,4 @@
     ============================================================ */
   </script>
 </body>
-</html>
+  </html>
