Add new car entries to CAR_DB

--- a/index.html
+++ b/index.html
@@ -825,8 +825,8 @@
     ============================================================ */
 
     const CAR_DB = [
-      { id:"falcon",  name:"Falcon",  cls:"GT",     topSpeed:220, zeroToSixty:3.4, bhp:460, handling:82, img:"falcon.png" },
-      { id:"viper",   name:"Viper",   cls:"GT",     topSpeed:235, zeroToSixty:3.1, bhp:510, handling:76, img:"viper.png" },
+      { id:"murcielago1",  name:"2001 Lamborghini Murcielago",  cls:"GT",     topSpeed:205, zeroToSixty:3.6, bhp:572, handling:87, img:"murcielago1.png" },
+      { id:"golfgti1",   name:"2014 Volkswagen Golf GTI",   cls:"GT",     topSpeed:152, zeroToSixty:6.2, bhp:226, handling:78, img:"golfgti1.png" },
       { id:"shadow",  name:"Shadow",  cls:"Track",  topSpeed:210, zeroToSixty:3.6, bhp:430, handling:90, img:"shadow.png" },
       { id:"blaze",   name:"Blaze",   cls:"GT",     topSpeed:228, zeroToSixty:3.3, bhp:485, handling:84, img:"blaze.png" },
       { id:"storm",   name:"Storm",   cls:"Track",  topSpeed:205, zeroToSixty:3.8, bhp:410, handling:95, img:"storm.png" },
