--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
     const CAR_DB = [
       { id:"murcielago1",  name:"2001 Lamborghini Murcielago",  cls:"GT",     topSpeed:205, zeroToSixty:3.6, bhp:572, handling:87, img:"murcielago1.png" },
       { id:"golfgti1",   name:"2014 Volkswagen Golf GTI",   cls:"GT",     topSpeed:152, zeroToSixty:6.2, bhp:226, handling:78, img:"golfgti1.png" },
-      { id:"shadow",  name:"Shadow",  cls:"Track",  topSpeed:210, zeroToSixty:3.6, bhp:430, handling:90, img:"shadow.png" },
+      { id:"golfgti2",  name:"2010 Volkswagen Golf GTI",  cls:"GT",  topSpeed:149, zeroToSixty:6.7, bhp:207, handling:76, img:"golfgti2.png" },
       { id:"blaze",   name:"Blaze",   cls:"GT",     topSpeed:228, zeroToSixty:3.3, bhp:485, handling:84, img:"blaze.png" },
       { id:"storm",   name:"Storm",   cls:"Track",  topSpeed:205, zeroToSixty:3.8, bhp:410, handling:95, img:"storm.png" },
       { id:"phantom", name:"Phantom", cls:"Hyper",  topSpeed:250, zeroToSixty:2.9, bhp:620, handling:78, img:"phantom.png" },
