--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
       { id:"murcielago1",  name:"2001 Lamborghini Murcielago",  cls:"GT",     topSpeed:205, zeroToSixty:3.6, bhp:572, handling:87, img:"murcielago1.png" },
       { id:"golfgti1",   name:"2014 Volkswagen Golf GTI",   cls:"GT",     topSpeed:152, zeroToSixty:6.2, bhp:226, handling:78, img:"golfgti1.png" },
       { id:"golfgti2",  name:"2010 Volkswagen Golf GTI",  cls:"GT",  topSpeed:149, zeroToSixty:6.7, bhp:207, handling:76, img:"golfgti2.png" },
-      { id:"blaze",   name:"Blaze",   cls:"GT",     topSpeed:228, zeroToSixty:3.3, bhp:485, handling:84, img:"blaze.png" },
+      { id:"cuprar",   name:"2002 SEAT Leon Cupra R",   cls:"GT",     topSpeed:150, zeroToSixty:7.0, bhp:210, handling:103, img:"cuprar1.png" },
       { id:"storm",   name:"Storm",   cls:"Track",  topSpeed:205, zeroToSixty:3.8, bhp:410, handling:95, img:"storm.png" },
       { id:"phantom", name:"Phantom", cls:"Hyper",  topSpeed:250, zeroToSixty:2.9, bhp:620, handling:78, img:"phantom.png" },
 
