Replace Phantom with 2019 Hyundai i30 N TCR

--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
       { id:"golfgti2",  name:"2010 Volkswagen Golf GTI",  cls:"GT",  topSpeed:149, zeroToSixty:6.7, bhp:207, handling:78, img:"golfgti2.png" },
       { id:"cuprar",   name:"2002 SEAT Leon Cupra R",   cls:"GT",     topSpeed:150, zeroToSixty:7.0, bhp:210, handling:82, img:"cuprar1.png" },
       { id:"plaid1",   name:"2024 Tesla Model S Plaid",   cls:"GT",  topSpeed:199, zeroToSixty:1.99, bhp:1020, handling:84, img:"plaid1.png" },
-      { id:"phantom", name:"Phantom", cls:"Hyper",  topSpeed:250, zeroToSixty:2.9, bhp:620, handling:78, img:"phantom.png" },
+      { id:"i30n1", name:"2019 Hyundai i30 N TCR", cls:"Track",  topSpeed:163, zeroToSixty:5.2, bhp:349, handling:100, img:"i30n1.png" },
 
       { id:"ember",   name:"Ember",   cls:"GT",     topSpeed:225, zeroToSixty:3.2, bhp:495, handling:80, img:"ember.png" },
       { id:"quartz",  name:"Quartz",  cls:"Track",  topSpeed:215, zeroToSixty:3.5, bhp:455, handling:92, img:"quartz.png" },
