Replace Ember with 2012 BMW M3 in car list

--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
       { id:"plaid1",   name:"2024 Tesla Model S Plaid",   cls:"GT",  topSpeed:199, zeroToSixty:1.99, bhp:1020, handling:84, img:"plaid1.png" },
       { id:"i30n1", name:"2019 Hyundai i30 N TCR", cls:"Track",  topSpeed:163, zeroToSixty:5.2, bhp:349, handling:100, img:"i30n1.png" },
 
-      { id:"ember",   name:"Ember",   cls:"GT",     topSpeed:225, zeroToSixty:3.2, bhp:495, handling:80, img:"ember.png" },
+      { id:"m31",   name:"2012 BMW M3",   cls:"GT",     topSpeed:155, zeroToSixty:4.3, bhp:414, handling:86, img:"m31.png" },
       { id:"quartz",  name:"Quartz",  cls:"Track",  topSpeed:215, zeroToSixty:3.5, bhp:455, handling:92, img:"quartz.png" },
       { id:"nova",    name:"Nova",    cls:"Hyper",  topSpeed:245, zeroToSixty:2.95,bhp:640, handling:81, img:"nova.png" },
       { id:"raven",   name:"Raven",   cls:"GT",     topSpeed:232, zeroToSixty:3.25,bhp:520, handling:83, img:"raven.png" },
