Fix image filename for Porsche 919 Hybrid Evo

--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
 
       { id:"m31",   name:"2012 BMW M3",   cls:"GT",     topSpeed:155, zeroToSixty:4.3, bhp:414, handling:86, img:"m31.png" },
       { id:"cobra1",  name:"2020 Ford Mustang Cobra Jet 1400",  cls:"Track",  topSpeed:179, zeroToSixty:1.5, bhp:1400, handling:62, img:"cobra1.png" },
-      { id:"919evo1",    name:"2018 Porsche 919 Hybrid Evo",    cls:"Track",  topSpeed:230, zeroToSixty:2.1,bhp:1160, handling:113, img:"nova.png" },
+      { id:"919evo1",    name:"2018 Porsche 919 Hybrid Evo",    cls:"Track",  topSpeed:230, zeroToSixty:2.1,bhp:1160, handling:113, img:"919evo1.png" },
       { id:"raven",   name:"Raven",   cls:"GT",     topSpeed:232, zeroToSixty:3.25,bhp:520, handling:83, img:"raven.png" },
 
       /* Add more cars below (just keep unique ids) */
