--- a/index.html
+++ b/index.html
@@ -1542,32 +1542,25 @@
   const vmax = perf.vmax;
   const v60 = perf.v60;
 
-  // Strong dependence on 0–60 time
-  const baseAccel = perf.a0 * 1.15;
+  const base = perf.a0 * 1.35;
 
-  // Traction limit
-  const tractionLimit = 10.5;
+  const tractionLimit = 12.2;
 
-  let accel;
+  let a;
 
   if(v < v60){
-
-    // 0–60 zone = HUGE impact
-    accel = Math.min(baseAccel, tractionLimit);
-
+    a = Math.min(base, tractionLimit);
   } else {
 
-    // From 60 to top speed = slower climb (realistic drag)
     const x = v / vmax;
 
-    accel = baseAccel * Math.pow(1 - x, 1.8);
+    a = base * Math.pow(1 - x, 2.2);
 
-    // Prevent flatlining
-    accel = Math.max(accel, 0.12);
+    a = Math.max(a, 0.08);
   }
 
-  return accel;
-      }
+  return a;
+}
     function cornerCap(perf, severity){
 
   const vmax = perf.vmax;
