--- a/index.html
+++ b/index.html
@@ -1765,7 +1765,7 @@
     const accel = accelAtSpeed(r.perf, r.v);
 
     // slight boost exiting corners for good handling cars
-    const exitBoost = lerp(0.85, 1.05, h);
+    const exitBoost =
 
     r.v += accel * exitBoost * dt;
 
